# fuchsia-cobalt

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .gn  BUILD.gn  CMakeLists.txt  README.md  cobalt.cmake  cobalt.ensure  cobalt_config_header.gni  cobaltb.py  event.proto  gtest.h  key.proto  logging.h  metrics_registry.gni  observation2.proto  observation_batch.proto  report_row.proto  setup.sh  tracing.h
algorithms/forculus/: BUILD.gn  field_element.cc  field_element.h  field_element_test.cc  forculus_analyzer.cc  forculus_analyzer.h  forculus_analyzer_test.cc  forculus_decrypter.cc  forculus_decrypter.h  forculus_decrypter_test.cc  forculus_encrypter.cc  forculus_encrypter.h  forculus_encrypter_test.cc  forculus_performance_test.cc  forculus_utils.cc  forculus_utils.h  polynomial_computation_test.cc  polynomial_computations.cc  polynomial_computations.h
algorithms/rappor/: BUILD.gn  basic_rappor_analyzer.cc  basic_rappor_analyzer.h  basic_rappor_analyzer_test.cc  bloom_bit_counter.cc  bloom_bit_counter.h  bloom_bit_counter_test.cc  lasso_runner.cc  lasso_runner.h  lasso_runner_test.cc  lasso_runner_test.h  lasso_runner_unit_tests.cc  rappor_analyzer.cc  rappor_analyzer.h  rappor_analyzer_manual_tests.cc  rappor_analyzer_test.cc  rappor_analyzer_test.h  rappor_analyzer_unit_tests.cc  rappor_analyzer_utils.cc  rappor_analyzer_utils.h  rappor_config_helper.cc  rappor_config_helper.h  rappor_config_helper_test.cc  rappor_config_validator.cc  rappor_config_validator.h  rappor_encoder.cc  rappor_encoder.h  rappor_encoder_test.cc  rappor_test_utils.cc  rappor_test_utils.h  rappor_test_utils_test.cc
config/: BUILD.gn  CMakeLists.txt  analyzer_config.cc  analyzer_config.h  analyzer_config_manager.cc  analyzer_config_manager.h  analyzer_config_test.cc  annotations.proto  buckets_config.cc  buckets_config.h  buckets_config_test.cc  client_config.cc  client_config.h  client_config_test.cc  cobalt_registry.proto  config.h  config_gen.cc  config_test.cc  config_text_parser.h  encoding_config.h  id.cc  id_test.cc  metric_config.h  metric_definition.proto  metrics.proto  packed_event_codes.cc  packed_event_codes.h  packed_event_codes_test.cc  project_configs.cc  project_configs.h  project_configs_test.cc  report_configs.proto  report_definition.proto
config/config_change_validator/: CMakeLists.txt
config/config_parser/: BUILD.gn  CMakeLists.txt  test_stable_config_parser.py
config/validation/: BUILD.gn  CMakeLists.txt  valid_cobalt_config.cc  valid_cobalt_config.h  validate_main.cc
encoder/: BUILD.gn  CMakeLists.txt  client_secret.cc  client_secret.h  client_secret_test.cc  encoder.cc  encoder.h  encoder_test.cc  envelope_maker.cc  envelope_maker.h  envelope_maker_test.cc  fake_system_data.h  file_observation_store.cc  file_observation_store.h  file_observation_store_test.cc  memory_observation_store.cc  memory_observation_store.h  observation_store.cc  observation_store.h  project_context.cc  project_context.h  shipping_manager.cc  shipping_manager.h  shipping_manager_test.cc  shuffler_client.cc  shuffler_client_test.cc  system_data.cc  system_data.h  system_data_test.cc  upload_scheduler.cc  upload_scheduler.h  upload_scheduler_test.cc
keys/: BUILD.gn  CMakeLists.txt  analyzer_prod_public.cobalt_key  analyzer_public.cobalt_key  analyzer_public_key.tink  keys_tests.cc  shuffler_prod_public.cobalt_key  shuffler_public.cobalt_key  shuffler_public_key.tink
logger/: BUILD.gn  CMakeLists.txt  channel_mapper.cc  channel_mapper.h  channel_mapper_test.cc  encoder.cc  encoder.h  encoder_test.cc  event_aggregator.cc  event_aggregator.h  event_aggregator_test.cc  event_record.h  fake_logger.cc  fake_logger.h  internal_metrics.cc  internal_metrics.h  internal_metrics_test.cc  local_aggregation.proto  logger.cc  logger.h  logger_interface.h  logger_test.cc  logger_test_utils.cc  logger_test_utils.h  observation_writer.cc  observation_writer.h  project_context.cc  project_context.h  project_context_factory.cc  project_context_factory.h  project_context_factory_test.cc  project_context_test.cc  status.h  testing_constants.h  types.h
logger/test_registries/: BUILD.gn  CMakeLists.txt  all_report_types_test_registry.yaml  encoder_test_registry.yaml  mixed_time_zone_test_registry.yaml  per_device_count_test_registry.yaml  per_device_numeric_stats_test_registry.yaml  unique_actives_noise_free_test_registry.yaml  unique_actives_test_registry.yaml
src/: BUILD.gn  gtest.h  logging.h  tracing.h
src/algorithms/: BUILD.gn
src/lib/: BUILD.gn
src/local_aggregation/: BUILD.gn  aggregate_store.cc  aggregate_store.h  aggregate_store_test.cc  aggregation_utils.cc  aggregation_utils.h  aggregation_utils_test.cc  event_aggregator.cc  event_aggregator.h  event_aggregator_mgr.cc  event_aggregator_mgr.h  event_aggregator_mgr_test.cc  event_aggregator_test.cc  local_aggregation.proto
src/local_aggregation_1.1/: BUILD.gn  aggregation_procedure.cc  aggregation_procedure.h  aggregation_procedure_test.cc  local_aggregate_storage.cc  local_aggregate_storage.h  local_aggregate_storage_test.cc  local_aggregation.cc  local_aggregation.h  local_aggregation.proto  observation_generator.cc  observation_generator.h  observation_generator_test.cc  test.cc
src/logger/: BUILD.gn  channel_mapper.cc  channel_mapper.h  channel_mapper_test.cc  encoder.cc  encoder.h  encoder_test.cc  event_aggregator.cc  event_aggregator.h  event_aggregator_test.cc  event_loggers.cc  event_loggers.h  event_loggers_test.cc  event_record.h  fake_logger.cc  fake_logger.h  internal_metrics.cc  internal_metrics.h  internal_metrics_test.cc  logger.cc  logger.h  logger_test.cc  (+17 more)
util/: BUILD.gn  CMakeLists.txt  clock.h  consistent_proto_store.cc  consistent_proto_store.h  consistent_proto_store_test.cc  datetime_util.cc  datetime_util.h  datetime_util_test.cc  encrypted_message_util.cc  encrypted_message_util.h  encrypted_message_util_test.cc  file_system.h  file_util.cc  file_util.h  log_based_metrics.h  pem_util.cc  pem_util.h  posix_file_system.cc  posix_file_system.h  protected_fields.h  proto_util.cc  proto_util.h  status.cc  status.h
(+410 files in other folders)
