# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

buildconfig = "//build/config/BUILDCONFIG.gn"
script_executable = "/usr/bin/env"
secondary_source = "//build/secondary/"
check_targets = [ "//src/*" ]
