# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("cobalt_registry_proto") {
  deps = [
    "$cobalt_root/src/registry:cobalt_registry_proto",
  ]
}

group("id") {
  deps = [
    "$cobalt_root/src/registry:id",
  ]
}
