# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/cobalt_config/metrics_registry.gni")

group("logger") {
  public_deps = [
    ":internal_metrics_config",
  ]
  deps = [
    "$cobalt_root/src/logger",
  ]
}

group("logger_test_utils") {
  testonly = true
  deps = [
    "$cobalt_root/src/logger:logger_test_utils",
  ]
}

group("event_aggregator") {
  public_deps = [
    "$cobalt_root/src/logger:event_aggregator",
  ]
}

group("project_context_factory") {
  deps = [
    "$cobalt_root/src/logger:project_context_factory",
  ]
}

metrics_registry("internal_metrics_config") {
  customer_id = 2147483647
  project_name = "metrics"
  namespace = "cobalt.logger.old"

  generate_binarypb = false
  generate_cc = true
}
